--- a/training.ipynb
+++ b/training.ipynb
@@ -404,8 +404,8 @@
    "source": [
     "def main():\n",
     "    parser = argparse.ArgumentParser()\n",
-    "    parser.add_argument('--data', default=r'C:\\Users\\KIIT\\Documents\\GitHub\\CLIP_prefix_caption\\data\\coco\\oscar_split_ViT-B_32_train.pkl') #C:\\Users\\KIIT\\Documents\\GitHub\\CLIP_prefix_caption\\data\\coco\\oscar_split_ViT-B_32_train.pkl\n",
-    "    parser.add_argument('--out_dir', default=r'C:\\Users\\KIIT\\Documents\\GitHub\\CLIP_prefix_caption')\n",
+    "    parser.add_argument('--data', default=r'C:\\Users\\KIIT\\Documents\\GitHub\\clip-encoder--t5-decoder-\\data\\coco\\oscar_split_ViT-B_32_train.pkl') #C:\\Users\\KIIT\\Documents\\GitHub\\CLIP_prefix_caption\\data\\coco\\oscar_split_ViT-B_32_train.pkl\n",
+    "    parser.add_argument('--out_dir', default=r'C:\\Users\\KIIT\\Documents\\GitHub\\clip-encoder--t5-decoder-\\pretrained_models')\n",
     "    parser.add_argument('--prefix', default='coco_prefix', help='prefix for saved filenames')\n",
     "    parser.add_argument('--epochs', type=int, default=10)\n",
     "    parser.add_argument('--save_every', type=int, default=1)\n",
